--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -515,7 +515,7 @@ https://templatemo.com/tm-538-digital-trend
 
   .about-image img {
     display: block;
-    margin: 0 auto;
+    margin: 10px auto 0;
   }
 
 
