--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -405,11 +405,13 @@ https://templatemo.com/tm-538-digital-trend
   }
 
   .project-wrapper {
-    position: relative;
+    position: relative; 
   }
 
   .project-wrapper img {
     border-radius: var(--border-radius-small);
+    height: 200px;
+    width: 200px;
   }
 
   .project-info {
