--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -205,6 +205,11 @@ https://templatemo.com/tm-538-digital-trend
   .section-padding {
     padding: 8em 0;
   }
+
+  .section-padding-bottom {
+    padding-top: 8em;
+  }
+
   .section-padding-half {
     padding: 4em 0;
   }
@@ -527,17 +532,17 @@ https://templatemo.com/tm-538-digital-trend
   -----------------------------------------*/
 
   .card{
-    border-radius: 4px;
-    background: #fff;
+    border-radius: 5px;
     box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
-      transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
-  padding: 14px 80px 18px 36px;
-  cursor: pointer;
+    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+    cursor: pointer;
 }
 
 .card:hover{
-     transform: scale(1.05);
-  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+    transform: scale(1.05);
+    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+    z-index: 1;
+}
 
 
   /*---------------------------------------
@@ -624,7 +629,7 @@ https://templatemo.com/tm-538-digital-trend
 
   .site-footer {
     background: var(--dark-color);
-    padding: 7em 0 6em 0;
+    padding: 1em 0 6em 0;
   }
 
   .site-footer a {
