--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -544,6 +544,14 @@ https://templatemo.com/tm-538-digital-trend
     z-index: 1;
 }
 
+.card-text:hover{
+  color: #15141a;
+}
+
+text-muted:hover{
+  color: #15141a;
+}
+
 
   /*---------------------------------------
       BLOG            
